--- a/Dockerfile.jupyter
+++ b/Dockerfile.jupyter
@@ -73,6 +73,8 @@ ENV PATH="${HOME}/conda/bin:${HOME}/conda/condabin:/usr/local/openjdk-17/bin:/us
 RUN pip install euporie
 
 ## Install SysMLv2 as Jupyter Kernel
+ENV JUPYTER_ENABLE_LAB=yes
+ENV JUPYTER_TOKEN=sysmlv2
 RUN ./install.sh
 
 ## Point the publish command to the local API server.
