--- a/.env
+++ b/.env
@@ -1,3 +1,14 @@
+DEBUG=1
+SECRET_KEY=foo
+DJANGO_ALLOWED_HOSTS=localhost 127.0.0.1 [::1] backend-1
+SQL_ENGINE=django.db.backends.postgresql_psycopg2
+SQL_DATABASE=sysml
+SQL_USER=sysmluser
+SQL_PASSWORD=SysMLv2
+SQL_HOST=db
+SQL_PORT=5432
+DATABASE=postgres
+
 RELEASE=2024-12
 SYSML_RELEASE=2024-12
 NB_USER=sysml
