--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,22 @@
 services:
-  postgresdbserver:
-    image: postgres:12-bullseye
+  db:
+    build:
+      context: ./db
+      dockerfile: ./Dockerfile
     restart: always
     environment:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=mysecretpassword
       - POSTGRES_DB=sysml2
+      - SQL_USER=sysmluser
+      - SQL_PASSWORD=SysMLv2
+      - SQL_DATABASE=sysml
+      - PGDATA=/var/lib/postgresql/data
+
     ports:
       - "5432:5432"
     volumes:
-      - postgresdbserver:/var/lib/postgresql/data
+      - pg_data:/var/lib/postgresql/data
 
   sysmlapiserver:
     build:
@@ -18,25 +25,29 @@ services:
     image: sysmlapiserver
     tty: true
     links:
-      - postgresdbserver
+      - db
     ports:
       - "9000:9000"
     restart: always
 
-  sysmljupyter:
+  backend:
     build:
-      context: .
-      dockerfile: Dockerfile.jupyter
-    image: sysmljupyter
+      context: web/backend
+      dockerfile: Dockerfile
+    command: python3 manage.py runserver 0.0.0.0:8000
+    image: backend
+    env_file:
+      - ./.env
     links:
       - sysmlapiserver
     ports:
-      - "8888:8888"
-    restart: always
-    user: ${NB_USER}
+      - 8000:8000
     volumes:
-      - "./mydata:/home/sysml/SysML-v2-Release-${SYSML_RELEASE}/mydata"
+      - ./web/backend:/app
+    depends_on:
+      - db
+
 
 volumes:
-  postgresdbserver:
+  pg_data:
 
